# doitb

./: .gitignore  Cargo.toml  ai  ai_backup.sql
src/: main.rs
src/llm/: mod.rs  openai.rs  openrouter.rs  traits.rs
src/memory/: embedding.rs  mod.rs  search.rs  store.rs  vector_search.rs
src/routes/: agent.rs
